--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,35 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
-
+    tools:context=".MainActivity"
+    android:background="@drawable/tanjiro">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margintop="24dp"
-        android:text="conoce tu destino Magic ball"
-        android:textColor="000000"
+             android:text="conoce al grande"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="italic|bold"/>
-
     <ImageView
         android:id="@+id/boton"
         android:Layout_width="wrap_content"
         android:Layout_height="wrap_content"
         android:Layout_gravity="center"
-        android:Layout_margin="48dp"/>
+        android:Layout_margin="48dp"
         app:srcCompat="@drawable/ball"/>
-
     <TextView
         android:id="@+id/respuesta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margintop="24dp"
-        android:text="..."
+         android:text="..."
         android:textColor="000000"
         android:textSize="24sp"
         android:textStyle="italic|bold"/>
 
-</</linearlayout>
+</linearlayout>
